# CNN_CPP

./: .gitignore  CMakeLists.txt  test.py
include/: Activation.h  BatchNorm1d.h  Conv1d.h  Layer.h  Linear.h  SequentialLayer.h  config.h  utils.h
src/: BatchNorm1d.cpp  Conv1d.cpp  Linear.cpp  test.cpp
